[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "Attention-Residuals"
version = "0.1.0"
description = "Attention Residuals (AttnRes) — arXiv:2603.15031"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["attn_res*"]
